<resources>
    <string name="app_name">QuizApp</string>
    <string name="or">--OR--</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="login">LOGIN</string>
    <string name="login1">Login</string>
    <string name="signup">SIGNUP</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_specified">Not Specified</string>
    <string name="signup1">SIGNUP</string>
    <string name="register">Register</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="correct_answer_0">Correct Answer: 0</string>
    <string name="wrong_answer_0">Wrong Answer: 0</string>
    <string name="you_ve_successfully_completed_the_quiz">You\'ve successfully completed the Quiz</string>
    <string name="others">Others</string>
</resources>