<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="50dp"
        android:layout_marginTop="95dp"
        android:textColor="@color/teal_200"
        android:text="@string/register"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="User Name"
        android:id="@+id/edUsername"
        android:textColorHint="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edPassword"
        android:inputType="textPassword"
        android:hint="Password"
        android:textColorHint="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Confirm_pwd"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/teal_200"
        android:layout_marginTop="8dp"
        android:textSize="24sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="20sp"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:id="@+id/btn_create_user"
        android:text="@string/signup1"/>




</LinearLayout>