<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".QuizResults">

    <ImageView
        android:id="@+id/congratulationsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/congratulations"/>
    <TextView
        android:id="@+id/successfulTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_below="@+id/congratulationsIcon"
        android:text="@string/you_ve_successfully_completed_the_quiz"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/successfulTextView"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correctAnswers"
            android:text="@string/correct_answer_0"
            android:textStyle="bold"
            android:textColor="#00C853" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrectAnswer"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:text="@string/wrong_answer_0"
            android:textColor="#DD2C00"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startNewQuizBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/round_back_green20"
        android:text="@string/start_new_quiz"
        android:textColor="@color/white" />

</RelativeLayout>